[package]
name = "conrod_test"
version = "0.1.0"
authors = ["shiMusa <fehsef@gmail.com>"]

[dependencies]
conrod = {git = "https://github.com/PistonDevelopers/conrod.git", features=["winit", "glium"]}
time = "*"
num = "*"

[lib]
name = "sabi"
path = "src/lib.rs"

[[bin]]
name = "sabi"
path = "src/main.rs"